--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <meta name="keywords" content="Ying Tang, Ying Tang, HKU, University of Hong Kong, Stanford, CUHK, The Chinese University of Hong Kong, 
 	ZJU, Zhejiang University, Computer, Vision, Machine, Learning, Medical Image, Healthcare"> 
-<meta name="description" content="Lequan Yu is an Assistant Professor at HKU.">
+<meta name="description" content="Ying Tang is an Professor at .">
 <meta name="google-site-verification" content="yy_3iiS_X6pJdegdwitJMrH0LRLHXwpjrV9RKLXxKjg" />
 <link rel="stylesheet" href="jemdoc.css" type="text/css">
 <title>Ying Tang Homepage</title>
