--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
 </nav>
 
 <div id="layout-content" style="margin-top:25px">
- <a href="https://github.com/yulequan" class="github-corner"><svg width="80" height="80" viewBox="0 0 250 250" style="fill:#FD6C6C; 
+ <a href="https://yingtangwebsite.netlify.app/
+" class="github-corner"><svg width="80" height="80" viewBox="0 0 250 250" style="fill:#FD6C6C; 
     color:#fff; position: absolute; top: 0; border: 0; right: 0;"><path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z">
    </path><path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 
    C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;
@@ -61,14 +62,14 @@
 					<h1>Ying Tang</h1><h1>
 				</h1></div>
 
-				<h3>Assistant Professor</h3>
+				<h3>Professor</h3>
 				<p>
 					Rm 226, Run Run Shaw Building<br>
 					Department of Statistics and Actuarial Science<br>
 					The University of Hong Kong <br>
 					Hong Kong<br>
 					<br>
-					Email: lqyu [at] hku [dot] hk
+					Email:jamestang [at] 23gmail [dot] com
 			
 				</p>
 				<p> <a href="https://scholar.google.com/citations?user=llXf3wUAAAAJ&hl=en"><img src="./pic/google_scholar.png" height="30px" style="margin-bottom:-3px"></a>
